--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@mui/joy": "^5.0.0-beta.15",
     "@mui/material": "^5.14.18",
     "@mui/styles": "^5.14.18",
+    "@tanstack/react-query": "^5.12.2",
     "axios": "^1.6.2",
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-facebook-login": "^4.1.1",
