--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/joy": "^5.0.0-beta.15",
     "@mui/material": "^5.14.18",
     "@mui/styles": "^5.14.18",
+    "@sweetalert2/themes": "^5.0.15",
     "@tanstack/react-query": "^5.12.2",
     "axios": "^1.6.2",
     "firebase": "^10.7.1",
