--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-tsparticles": "^2.12.2",
     "select2": "^4.1.0-rc.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.10.1",
     "tsparticles": "^2.12.0",
     "wow.js": "^1.2.2",
     "wowjs": "^1.1.3"
