--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-facebook-login": "^4.1.1",
+    "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.20.0",
     "react-select2": "^4.0.3",
     "react-slick": "^0.29.0",
