--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@mui/material": "^5.14.18",
     "@mui/styles": "^5.14.18",
     "@smastrom/react-rating": "^1.4.0",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.1",
     "@sweetalert2/themes": "^5.0.15",
     "@tanstack/react-query": "^5.13.4",
     "axios": "^1.6.2",
